# agentwise

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DISCOVER-DONE.md  LICENSE-APACHE  PLAN.md  README.md  WORKSTREAMS.md  WS1-DONE.md  WS3-DONE.md  WS4-DONE.md  action.yml  install.sh  test-report-output-flag.html
.github/workflows/: ci.yml  release.yml
blog/: hn-post.md  i-scanned-50-mcp-servers.md  reddit-posts.md  x-thread.md
cvedb/: mcp-cves.json
research/: FINDINGS.md  benchmarks.md  scan-results-terminal.txt  scan-results.json
research/configs/: SOURCES.csv  SOURCES.jsonl  SOURCES.md
research/configs/combined/: combined-batch-01.mcp.json  combined-batch-02.mcp.json  combined-batch-03.mcp.json  combined-batch-04.mcp.json
research/configs/sources/: community-tuto-054-zazencodes-zazencodes-season-2-fastmcp-tutorial.mcp.json  community-tuto-055-zazencodes-zazencodes-season-2-fastmcp-tutorial.mcp.json  community-tuto-056-jddunn-tenets-tenets.mcp.json  community-tuto-057-claude-php-claude-php-agent-claude-php-agent.mcp.json  community-tuto-060-claude-php-claude-php-agent-dev-agents.mcp.json  (+48 more)
research/scripts/: ws2_collect_configs.py  ws2_generate_findings.py
scripts/: action-install.sh  action-scan.sh
src/: badge.rs  baseline.rs  config.rs  cvedb.rs  depsdev.rs  diff.rs  discover.rs  epss.rs  inspect.rs  main.rs  osv.rs  scanner.rs  score.rs  supply_chain.rs
src/report/: html.rs  json.rs  markdown.rs  mod.rs  sarif.rs  terminal.rs
src/rules/: allowlist.rs  auth.rs  cve.rs  deps.rs  filesystem.rs  injection.rs  mod.rs  network.rs  secrets.rs  shell.rs  supply_chain.rs  transport.rs  write_tools.rs
testdata/: allowlist-pattern-wildcard.json  claude-desktop.json  clean-mcp.json  codex-config.toml  injection-risk.json  snake-case-mcp.json  sse-no-auth.json  wildcard-bind.json  ws-no-auth.json
testdata/baseline-test/: .agentwise-ignore.json  vulnerable-mcp.json
tests/: action_smoke.sh  integration_tests.rs
ws4-logs/: task1-release-binary.txt  task1-release-dir.txt  task1-release-size-bytes.txt  task2-cargo-audit.json  task3-json-vulnerable.payload.json  task3-sarif-vulnerable.jsontool.err  task3-sarif-vulnerable.payload.json  task7-metascan-json.payload.json
(+3 files in other folders)
