[package]
name = "agentwise"
version = "0.1.2"
edition = "2021"
description = "A fast, offline security scanner for MCP server configurations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brandonwise/agentwise"
readme = "README.md"
keywords = ["mcp", "security", "scanner", "ai-agents", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**",
    "cvedb/**",
    "tests/**",
    "testdata/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
walkdir = "2"
regex = "1"
glob = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
